# neuroimprint-detector

./: .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  pyproject.toml
src/neuroimprint_detector/: __init__.py  cli.py
src/neuroimprint_detector/core/: detector.py  estimator.py  inverter.py  tokenizer_reconstructor.py
src/neuroimprint_detector/utils/: hf_loader.py  synthetics.py
tests/integration/: test_loader.py
tests/unit/: test_detector.py  test_estimator.py
